[package]
name = "redis-rust-proxy"
version = "0.2.7"
authors = ["Verticaleap"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full", "tracing"] }
futures = "0.3.0"
net2 = "0.2.33"
clap = "2"
redis = "0.17" 
log = "0.4"
env_logger = "0.7"
chrono = "0.4"
rand = "0.7"
url = "2.2"
